--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ terraform.tfstate
 .terraform/providers/registry.terraform.io/hashicorp/aws/4.67.0/linux_amd64/terraform-provider-aws_v4.67.0_x5
 terraform.tfvars
 terraform.tfstate.backup
+griga-key.pem
