--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -57,7 +57,7 @@ jobs:
 
     - name: Run Ansible playbook
       if: success()  
-      run: ansible-playbook site.yml
+      run: ansible-playbook hosts site.yml
 
     - name: Clone s3-website repository
       if: success()
@@ -71,12 +71,11 @@ jobs:
         ansible all -m copy -a "src=./s3-website/website dest=/var/www/html/wordpress owner=www-data group=www-data mode=0755"
 
     - name: Terraform Destroy
-      if: always()
-      # if: failure()
+      if: ${{ github.event_name == 'workflow_dispatch' }}
+      # if: always()
       run: terraform destroy -auto-approve
       env:
         TF_VAR_access_key: ${{ secrets.ACCESS_KEY }}
         TF_VAR_secret_key: ${{ secrets.SECRET_KEY }}
         TF_VAR_region: ${{ secrets.REGION }}
-        TF_VAR_bucket_name: ${{ secrets.BUCKET_NAME }}
 
