--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - main
-
+  workflow_dispatch:
+  
 jobs:
-  terraform:
+  terraform_apply:
     name: Terraform
     runs-on: ubuntu-latest
 
@@ -70,12 +71,35 @@ jobs:
       run: |
         ansible all -m copy -a "src=./s3-website/website dest=/var/www/html/wordpress owner=www-data group=www-data mode=0755"
 
+  terraform_destroy:
+    name: Terraform Destroy
+    runs-on: ubuntu-latest
+    needs: terraform_apply
+    if: ${{ github.event_name == 'workflow_dispatch' }}
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.7.5
+
+    - name: Terraform Init
+      run: terraform init
+
     - name: Terraform Destroy
-      # if: ${{ github.event_name == 'workflow_dispatch' }}
-      if: always()
       run: terraform destroy -auto-approve
       env:
         TF_VAR_access_key: ${{ secrets.ACCESS_KEY }}
         TF_VAR_secret_key: ${{ secrets.SECRET_KEY }}
         TF_VAR_region: ${{ secrets.REGION }}
+        
+    # - name: Terraform Destroy
+    #   if: ${{ github.event_name == 'workflow_dispatch' }}
+    #   # if: always()
+    #   run: terraform destroy -auto-approve
+    #   env:
+    #     TF_VAR_access_key: ${{ secrets.ACCESS_KEY }}
+    #     TF_VAR_secret_key: ${{ secrets.SECRET_KEY }}
+    #     TF_VAR_region: ${{ secrets.REGION }}
 
