--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -75,7 +75,7 @@ jobs:
     name: Terraform Destroy
     runs-on: ubuntu-latest
     needs: terraform_apply
-    if: ${{ github.event_name == 'workflow_dispatch' }}
+    if: always()
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
