--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -60,17 +60,18 @@ jobs:
     #   if: success()  
     #   run: ansible-playbook site.yml
 
-    - name: Export Elastic IP from Terraform to Ansible
+    - name: Get Elastic IP
       id: get_ip
       run: |
-        export ELASTIC_IP=$(terraform output -raw elastic_ip)
+        ELASTIC_IP=$(terraform output -raw elastic_ip)
         echo "Elastic IP: $ELASTIC_IP"
-        echo "::set-output name=elastic_ip::$ELASTIC_IP"
-      shell: bash
+        echo "elastic_ip=$ELASTIC_IP" >> $GITHUB_ENV
+        shell: bash
 
     - name: Run Ansible Playbook
       run: |
-        ansible-playbook -i "${{ steps.get_ip.outputs.elastic_ip }}," -e "ansible_python_interpreter=/usr/bin/python3" site.yml
+        ansible-playbook -i "${{ env.elastic_ip }}," -e "ansible_python_interpreter=/usr/bin/python3" site.yml
+      shell: bash
 
     - name: Clone s3-website repository
       if: success()
