--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,37 +42,18 @@ jobs:
       id: terraform_apply
       run: terraform apply tfplan
 
-    - name: Extract public IP from Terraform output
-      id: extract_ip
-      run: |
-        WEB_SERVER_IP=$(terraform output -raw instance_public_ip)
-        
-        if [ -z "$WEB_SERVER_IP" ]; then
-          echo "Error: No IP address found in Terraform output."
-          exit 1
-        fi
-        echo "WEB_SERVER_IP=${WEB_SERVER_IP}" >> $GITHUB_ENV
-        echo "Extracted IP address: ${WEB_SERVER_IP}"
-      env:
-        TF_VAR_access_key: ${{ secrets.ACCESS_KEY }}
-        TF_VAR_secret_key: ${{ secrets.SECRET_KEY }}
-        TF_VAR_region: ${{ secrets.REGION }}
-
     - name: Install Ansible
       if: success()
       run: |
         sudo apt-get update
         sudo apt-get install -y ansible
 
-    - name: Write Ansible inventory
-      if: success()
-      run: |
-        echo "[webserver]" > inventory.ini
-        echo "${{ env.WEB_SERVER_IP }} ansible_python_interpreter=/usr/bin/python3" >> inventory.ini
-
     - name: Run Ansible playbook
-      if: success()  
-      run: ansible-playbook -i inventory.ini site.yml
+      run: |
+        elastic_ip=$(terraform output -raw instance_public_ip)
+        echo "[webserver]" > hosts
+        echo "$elastic_ip ansible_python_interpreter=/usr/bin/python3" >> hosts
+        ansible-playbook -i hosts site.yml
 
     - name: Clone s3-website repository
       if: success()
