--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,8 +53,9 @@ jobs:
         elastic_ip=$(terraform output -raw instance_public_ip)
         echo "[webserver]" > hosts
         echo "$elastic_ip ansible_python_interpreter=/usr/bin/python3" >> hosts
+        cat hosts  # for debug
         ansible-playbook -i hosts site.yml
-
+      
     - name: Clone s3-website repository
       if: success()
       run: |
