--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -42,16 +42,22 @@ jobs:
       id: terraform_apply
       run: terraform apply tfplan
 
-    - name: Install Ansible
+    - name: Install Ansible & Python
       if: success()
       run: |
         sudo apt-get update
-        sudo apt-get install -y ansible
+        sudo apt-get install -y ansible python3-pip
+
+    - name: Run Python script to generate hosts file
+      if: success()
+      run: |
+        python3 generate_hosts.py
 
     - name: Run Ansible playbook
+      if: success()
       run: |
         ansible-playbook -i hosts site.yml
-      
+
     - name: Clone s3-website repository
       if: success()
       run: |
