--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 terraform.tfstate
 .terraform.lock.hcl
 .terraform.tfstate.lock.info
-.terraform/providers/registry.terraform.io/hashicorp/aws/4.67.0/linux_amd64/terraform-provider-aws_v4.67.0_x5
+.terraform/
 terraform.tfvars
 terraform.tfstate.backup
 griga-key.pem
