--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = hosts
+inventory = inventory
 remote_user = ubuntu
 private_key_file = griga-key.pem
 host_key_checking = False
