--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Run Ansible playbook
       if: success()
       run: |
-        ansible-playbook -i $elastic_ip, site.yml
+        ansible-playbook site.yml
 
     # - name: Clone s3-website repository
     #   if: success()
