--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -58,21 +58,15 @@ jobs:
         eval $(ssh-agent -s)
         ssh-add griga-key.pem
 
-    - name: Run Ansible playbook
+    # - name: Run Ansible playbook
+    #   if: success()
+    #   run: |
+    #     ansible-playbook site.yml
+
+    - name: Copy website folder to instance
       if: success()
       run: |
-        ansible-playbook site.yml
-
-    # - name: Clone s3-website repository
-    #   if: success()
-    #   run: |
-    #     git clone https://github.com/youonmyown/s3-website.git
-    #     ls s3-website/website
-
-    # - name: Copy website folder to instance
-    #   if: success()
-    #   run: |
-    #     ansible all -m copy -a "src=./s3-website/website dest=/var/www/html/wordpress owner=www-data group=www-data mode=0755" -i inventory.ini
+        ansible all -m copy -a "src=./website/website dest=/var/www/html/wordpress owner=www-data group=www-data mode=0755" -i inventory
 
     - name: Terraform Destroy
       if: always()
